--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -410,7 +410,7 @@ select {
 .btn-facebook {
   background-color: #3b5998;
   color: #fff; }
-.btn-facebook:hover, .btn-facebook:active {
+.btn-facebook:hover, .btn-facebook:focus {
   background-color: #344e86;
   color: #fff; }
 
@@ -419,6 +419,9 @@ select {
 
 .btn-outline-primary {
   background: #fff; }
+
+.link-decoration:hover, .link-decoration:focus {
+  text-decoration: underline; }
 
 [class^="icon-"], [class*="icon-"] {
   position: relative;
