--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -70,7 +70,9 @@ select {
   background-color: #fff; }
 @media (max-width: 1199.98px) {
   .col-recommend {
-    border: none; } }
+    border: none; }
+  .col-recommend .h4 {
+    font-size: 0.93rem; } }
 
 .slider-kv {
   margin: 0 !important; }
@@ -237,7 +239,7 @@ select {
   .table-record tr {
     margin: 0 0 1rem 0; }
   .table-record tbody tr {
-    border: 2px solid #d8d8d8; }
+    border: 1px solid #dedede; }
   .table-record td {
     position: relative;
     border: none;
@@ -348,7 +350,7 @@ select {
 
 .nav-tabs .nav-link {
   border: 0;
-  border-bottom: 4px solid #d8d8d8;
+  border-bottom: 4px solid #f5f5f5;
   color: #455461; }
 .nav-tabs .nav-link:hover, .nav-tabs .nav-link.active {
   border-bottom-color: #0096e6;
@@ -642,12 +644,13 @@ i.h1, i.h2, i.h3, i.h4, i.h5, i.h6 {
 .pushy-header {
   padding: 22px 0 20px;
   background: #fff;
-  border-bottom: 1px solid #0096e6; }
+  border-bottom: 1px solid #a7d5ed; }
 
 .pushy-in {
   padding: 0 30px; }
 .pushy-in .nav-link {
-  padding: 5px 0; }
+  padding: 5px 0;
+  color: #3c4043; }
 
 .pushy-member {
   position: relative;
