--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -551,6 +551,19 @@ i.h1, i.h2, i.h3, i.h4, i.h5, i.h6 {
 .custom-radio-v .custom-control-label::after, .custom-checkbox-v .custom-control-label::after {
   position: absolute; }
 
+[data-toggle="collapse"].link:after {
+  display: none; }
+[data-toggle="collapse"]:after {
+  float: right;
+  font-family: "Font Awesome\ 5 Free";
+  font-weight: 900; }
+[data-toggle="collapse"][aria-expanded="true"]:after {
+  content: ""; }
+[data-toggle="collapse"][aria-expanded="false"]:after {
+  content: ""; }
+[data-toggle="collapse"]:after {
+  content: ""; }
+
 /*! Pushy - v1.3.0 - 2019-6-25
 * Pushy is a responsive off-canvas navigation menu using CSS transforms & transitions.
 * https://github.com/christophery/pushy/
